--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -1,41 +1,25 @@
-name: 3D GitHub Contribution Updater
+name: GitHub-Profile-3D-Contrib
 
 on:
   schedule:
-    - cron: "30 12 * * *"  # 12:30 PM UTC daily (adjust to your timezone)
-  workflow_dispatch:       # Allows manual runs
-  push:
-    branches: [ main ]     # Optional: Run when README changes
-    paths: [ 'README.md' ]
+    - cron: "0 18 * * *"  # This will run the action at 18:00 UTC (adjust as needed)
+  workflow_dispatch:
 
 jobs:
-  generate-contributions:
+  build:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write     # Required for pushing changes
-    
+    name: generate-github-profile-3d-contrib
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0   # Gets full git history
-
-      - name: Generate 3D Contribution Graph
-        uses: yoshi389111/github-profile-3d-contrib@v0.9.2  # Pinned version
-        with:
-          username: ${{ github.repository_owner }}
+      - uses: actions/checkout@v4
+      - uses: dushaDev/github-profile-3d-contrib@latest
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN || secrets.PERSONAL_ACCESS_TOKEN }}
-          THEME: "night-rainbow"  # Best looking theme
-          INCLUDE_PRIVATE: "true"  # Include private contributions
-          YEAR: "last-3-years"    # Options: current-year, last-year, last-3-years, or specific years "2022,2023,2024"
-          MAX_REPOS: 100           # Increase if you have many repos
-          ENABLE_ANIMATION: "true" # Smoother visuals
-
-      - name: Commit and Push Changes
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          USERNAME: ${{ github.dushaDev }}
+      - name: Commit & Push
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add ./profile-3d-contrib/
-          git commit -m "🔄 Auto-update 3D contribution graph [skip ci]" || echo "No changes to commit"
-          git push
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add -A .
+          if git commit -m "generated"; then
+            git push
+          fi
