--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -2,24 +2,40 @@ name: GitHub-Profile-3D-Contrib
 
 on:
   schedule:
-    - cron: "0 18 * * *"  # This will run the action at 18:00 UTC (adjust as needed)
+    - cron: "30 12 * * *"  # 12:30 PM UTC daily
   workflow_dispatch:
+  push:
+    branches: [ main ]
+    paths: [ 'README.md' ]
 
 jobs:
-  build:
+  generate-contributions:
     runs-on: ubuntu-latest
-    name: generate-github-profile-3d-contrib
+    permissions:
+      contents: write
+    
     steps:
-      - uses: actions/checkout@v4
-      - uses: dushaDev/github-profile-3d-contrib@latest
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - name: Generate 3D Contribution Graph
+        uses: yoshi389111/github-profile-3d-contrib@0.9.2  # Use explicit version instead of @latest
+        with:
+          username: ${{ github.repository_owner }}
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          USERNAME: ${{ github.dushaDev }}
-      - name: Commit & Push
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN || secrets.PERSONAL_ACCESS_TOKEN }}
+          THEME: "night-rainbow"
+          INCLUDE_PRIVATE: "true"
+          YEAR: "last-3-years"
+          MAX_REPOS: 100
+          ENABLE_ANIMATION: "true"
+
+      - name: Commit and Push Changes
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git add -A .
-          if git commit -m "generated"; then
-            git push
-          fi
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+          git add ./profile-3d-contrib/
+          git commit -m "🔄 Auto-update 3D contribution graph [skip ci]" || echo "No changes to commit"
+          git push
