--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -21,7 +21,7 @@ jobs:
           fetch-depth: 0
 
       - name: Generate 3D Contribution Graph
-        uses: yoshi389111/github-profile-3d-contrib@0.9.2  # Use explicit version instead of @latest
+        uses: yoshi389111/github-profile-3d-contrib@latest
         with:
           username: ${{ github.repository_owner }}
         env:
