--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -2,39 +2,31 @@ name: GitHub-Profile-3D-Contrib
 
 on:
   schedule:
-    - cron: "30 12 * * *"  # 12:30 PM UTC daily
-  workflow_dispatch:
-  push:
-    branches: [ main ]
-    paths: [ 'README.md' ]
+    - cron: "0 18 * * *"  # Runs daily at 18:00 UTC (adjust as needed)
+  workflow_dispatch:      # Allows manual triggering
 
 jobs:
-  generate-contributions:
+  build:
     runs-on: ubuntu-latest
+    name: generate-github-profile-3d-contrib
     permissions:
       contents: write
-    
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Generate 3D Contribution Graph
-        uses: yoshi389111/github-profile-3d-contrib@latest
+      - uses: actions/checkout@v4
+      - uses: yoshi389111/github-profile-3d-contrib@latest
         env:
-          GITHUB_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: ${{ github.repository_owner }}
-          THEME: "night-rainbow"
-          INCLUDE_PRIVATE: "true"
-          CURRENT_YEAR: "true"  # This shows only current year's contributions
-          MAX_REPOS: 100
-          ENABLE_ANIMATION: "true"
-
-      - name: Commit and Push Changes
+          THEME: night-rainbow  # Choose your preferred theme
+          INCLUDE_PRIVATE: true  # Include private contributions
+          CURRENT_YEAR: true     # Show current year only
+          MAX_REPOS: 100         # Max repositories to analyze
+          ENABLE_ANIMATION: true # Animated version
+      - name: Commit & Push
         run: |
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add ./profile-3d-contrib/
-          git commit -m "🔄 Auto-update 3D contribution graph [skip ci]" || echo "No changes to commit"
-          git push
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add -A .
+          if git commit -m "Update 3D contribution graph"; then
+            git push
+          fi
